[package]
name = "kvs"
description = "A key-value store"
version = "0.1.0"
authors = ["odysa <piensengxv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"