[package]
name = "kvs"
description = "A key-value store"
version = "0.1.0"
authors = ["odysa <piensengxv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "1.0.5"
predicates = "1.0.8"
tempfile = "3.0.7"
walkdir = "2.2.7"