[package]
name = "kvs"
description = "A key-value store"
version = "0.1.0"
authors = ["odysa <piensengxv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
failure = "0.1.8"
slog = "2.5.0"
slog-term = "2.5.0"
slog-async = "2.5.0"
bytes = "1"
atoi = "0.4.0"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"

[dev-dependencies]
assert_cmd = "1.0.7"
criterion = "0.3.4"
predicates = "2.0.0"
rand = "0.8.4"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "kvs_benchmark"
harness = false